--- a/src/components/circleRating/style.scss
+++ b/src/components/circleRating/style.scss
@@ -1,13 +1,16 @@
 .circleRating {
-    background-color: var(--black);
-    border-radius: 50%;
-    padding: 2px;
-    .CircularProgressbar-text {
-        font-size: 34px;
-        font-weight: 700;
-        fill: var(--black);
-    }
-    .CircularProgressbar-trail {
-        stroke: transparent;
-    }
+  background-color: var(--black);
+  border-radius: 50%;
+  padding: 2px;
+  .CircularProgressbar-text {
+    font-size: 34px;
+    font-weight: 700;
+    font-family: "Inter", "Montserrat", "DM Sans", sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    fill: var(--black);
+  }
+  .CircularProgressbar-trail {
+    stroke: transparent;
+  }
 }
