--- a/src/components/genres/style.scss
+++ b/src/components/genres/style.scss
@@ -1,12 +1,23 @@
 .genres {
     display: flex;
-    gap: 5px;
+    gap: 6px;
+
     .genre {
         background-color: var(--pink);
-        padding: 3px 5px;
+        padding: 4px 8px;
         font-size: 12px;
-        border-radius: 4px;
+        font-weight: 600;
+        border-radius: 6px;
         color: white;
         white-space: nowrap;
+        opacity: 0.9;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+        transition: all 0.3s ease-in-out;
+
+        &:hover {
+            background-color: rgba(255, 105, 180, 0.9); // Adjust manually
+            opacity: 1;
+            transform: scale(1.05);
+        }
     }
 }
