Cast section added

--- a/src/pages/details/cast/style.scss
+++ b/src/pages/details/cast/style.scss
@@ -1,3 +1,5 @@
+// Styles for the Cast section, including layout and responsiveness
+
 @import "../../../mixins.scss";
 .castSection {
     position: relative;
